# finllm-agent

./: .env.example  .gitignore  README.md  pyproject.toml
eval/: multiturn_scenarios.json  questions.json  result_schema.md  run_multiturn.py
paper/: main.tex
scripts/: chat_cli.py  eval_provider_matrix.py  logs-runtime.sh  restart-runtime.sh  run_chat_cli.sh  serverctl.sh  start-runtime.sh  status-runtime.sh  test_scenarios.py
skills/: schema_guide.md  schema_guide_compact.md  skill_catalog.md
src/agent_runtime/: __init__.py  env.py  market_calendar.py  service.py  skills.py
src/agent_runtime/agent/: __init__.py  agent.py  base.py
src/agent_runtime/api/: __init__.py  app.py
src/agent_runtime/context/: __init__.py  condenser.py  llm_summarizing.py  rolling.py  view.py
src/agent_runtime/conversation/: __init__.py  base.py  conversation.py  event_log.py  local_conversation.py  state.py
src/agent_runtime/event/: __init__.py  action.py  base.py  condensation.py  message.py  observation.py  state_update.py  types.py
src/agent_runtime/kis/: __init__.py  quote.py
src/agent_runtime/llm/: __init__.py  anthropic.py  client.py  dummy.py  factory.py  gemini.py  messages.py  openai_compatible.py
src/agent_runtime/prompt/: __init__.py  builder.py  system_prompt.md
src/agent_runtime/tool/: __init__.py  builtins.py  registry.py  schema.py  spec.py  tool.py
src/agent_runtime/tool/backtest/: run_backtest.py
tests/: test_execute_forward_trades.py  test_forward_test_schedule.py  test_save_forward_snapshot.py  test_service_result_builder.py
(+18 files in other folders)
